network-policy-tls-ingress-security/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-server
  namespace: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-server
  template:
    metadata:
      labels:
        app: db-server
    spec:
      containers:
      - name: postgres
        image: postgres:13
        ports:
        - containerPort: 5432
